Issue #1996018 by Qandeel: Fixed Chosen Container not showing properly on Firefox.

--- a/css/chosen-drupal.css
+++ b/css/chosen-drupal.css
@@ -3,10 +3,6 @@
  * Drupal-specific CSS fixes for the Chosen module
  */
 
-.chzn-container {
-  display: table !important;
-}
-
 .chosen-container.error .chosen-single,
 .chosen-container.error .chosen-single span {
 	line-height: inherit;
